--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npx babel src --out-dir dist",
     "start": "npx babel src --watch --out-dir dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -19,11 +19,22 @@
   },
   "homepage": "https://github.com/andy-todd-dev/use-amplify-user#readme",
   "devDependencies": {
+    "@aws-amplify/auth": "^4.5.8",
     "@babel/cli": "^7.17.10",
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "dotenv": "^16.0.1",
     "eslint": "^8.18.0",
     "eslint-plugin-react": "^7.30.1",
-    "prettier": "2.7.1"
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
+    "prettier": "2.7.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
